--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "unidecode": "^0.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
